--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_CONNECT = "mongodb+srv://Nitesh9609:Nitesh9609@cluster0.fnrsx.mongodb.net/Kellton-Ecommerce?retryWrites=true&w=majority"
+DB_CONNECT=mongodb+srv://dasurahul:12345@cluster0.swidc.mongodb.net/Kellton-Ecommerce?retryWrites=true&w=majority
 
-TOKEN_SECRET = kdaioncuccnncwnccnuocnccjcwcuowdcjncon
+TOKEN_SECRET=kdaioncuccnncwnccnuocnccjcwcuowdcjncon
